--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -266,7 +266,7 @@ This paper rigorously examines the perception of association between two time se
 
 It has long been thought that EDA and statistical inference were worlds apart, but this is no longer true. \citet{Buja} and \citet{Majumder:2013} bridges the chasm. Framing a data plot as a test statistic, which when compared to plots of null data, places EDA into the statistical inference recipe. Underlying any data plot, there is an implicit null hypothesis that there is ``no pattern''. Particular types of plots may regulate what no  pattern means. For example, a scatter plot is used to explore for association between the two variables, so the implicit null hypothesis is that there is no association between the two variables. The alternative hypothesis is that there is some association, although it is not required to specify precisely the type of association. The departure from the null might be a single outlier, or few outliers, a non-linear trend, or clusters. To test the null hypothesis the data plot is placed in a lineup with plots of null data, data generated from a scenario of no pattern. For the scatterplot this can be achieved by permuting the values on one of the variables to break any association between the two variables. An impartial viewer is asked to select the plot that is the most different from the others. If they select the data plot as the most different, this counts as a rejection of the null hypothesis, and follow-up questions on why they made their choice may determine the type of departure from the null. With multiple independent observers a $p$-value can be calculated to measure the statistical significance of the departure from the null. This process is called the ``lineup protocol''. 
 
-The lineup protocol equips exploratory visual methods with a rigorous procedure that enables statistical inference. This is important because visualization remains essential for data analysis because human eyes can detect patterns which would not be detected mathematically. The lineup protocol provides the calibration of the human eyes to prevent us from erroneously jumping to conclusions about magic patterns. Prior to the protocol description, we can find preliminary ideas along these lines, for example \citet{Daniel} recommends looking at plots of data from a null distribution for exploring two factor design experimental data.  His paper provides 40 pages of plots from the null! He encourages data analysts to understand the patterns that might be seen in samples data drawn from populations without inherent structure. (\citep{Buja} has named this the Rorschach protocol.)
+The lineup protocol equips exploratory visual methods with a rigorous procedure that enables statistical inference. This is important because visualization remains essential for data analysis because human eyes can detect patterns which would not be detected mathematically. The lineup protocol provides the calibration of the human eyes to prevent us from erroneously jumping to conclusions about magic patterns. Prior to the protocol description, we can find preliminary ideas along these lines, for example \citet{Daniel} recommends looking at plots of data from a null distribution for exploring two factor design experimental data.  His paper provides 40 pages of plots from the null! He encourages data analysts to understand the patterns that might be seen in samples data drawn from populations without inherent structure. \citet{Buja} has named this the Rorschach protocol.)
 
 %which the human eye detects as more different in this data plot than in any of the nulls.
 %The plot of the data is placed in a lineup of plots of null data, data generated assuming that the null hypothesis is true. If an impartial observer asked to select the plot that is most different from the rest, does select the data plot this suggests there exists a pattern that is not the result of chance, and the null hypothesis is rejected. 
@@ -848,6 +848,12 @@ This paper showed that the scatterplot is better than the overlaid lines for dis
 Investigation of the individual selections of the lineup evaluations finds some results in-line with Wertheimer’s Gestalt Law of common fate, as demonstrated in Figure 15. The law suggested that people would find relationships between two lines that briefly move together, regardless of whether the relationship actually existed. Whilst this is shown, the overlaid line graph did not have a corresponding increase in confidence compared to the scatter plot; so research into similar confidence-boosting visual anomalies that can occur in scatter plots would be necessary to further investigate the law. Diaconis's Magical Thinking was supported by the finding on the relationships between time, confidence and true plot detection. A more difficult true plot may be selected rarely and require a longer to make a decision; resulting in decreased subject confidence. However, we found that time increases confidence but reduces the detection rate. Highly confident null selections suggests that subjects may have been distracted by strong, spurious patterns in the null plots.
 If a data analyst is required to use overlaid line graphs in their work, substantial improvements to power and hence readability can be made by smoothing time series data if the sample size is long enough for these techniques to become feasible.
 \fi
+
+\section{Acknowledgements}
+
+The authors gratefully acknowledge funding from the National Science Foundation Grant DMS \#1007697.
+
+All code required to reproduce this paper can be found at https://github.com/NTomasetti/correlation.
 
 \bibliographystyle{asa}
 \bibliography{references}
