--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -853,6 +853,10 @@ If a data analyst is required to use overlaid line graphs in their work, substan
 
 The authors gratefully acknowledge funding from the National Science Foundation Grant DMS \#1007697.
 
+The models used for this paper were generated using SAS software, Version 9 of the SAS System for Unix with the MIXED and GLIMMIX procedures. Copyright \©2015 SAS Institute Inc. SAS and all other SAS Institute Inc. product or service names are registered trademarks or trademarks of SAS Institute Inc., Cary, NC, USA. 
+
+Further analysis was carried out using \citet{R} version 3.1.2 and \cited{RStudio} version 0.99.484 using the packages: \citet{dplyr}, \citet{ggplot2}, \citet{grid}, \citet{gridExtra}, \citet{gridSVG}, \citet{knitr}, \citet{maps}, \citet{mFilter}, \citet{mnormt}, \citet{nullabor}, \citet{stringr} and \citet{tidyr}.
+
 All code required to reproduce this paper can be found at https://github.com/NTomasetti/correlation.
 
 \bibliographystyle{asa}
