--- a/paper/references.bib
+++ b/paper/references.bib
@@ -414,3 +414,120 @@ address = {Los Alamitos, CA, USA},
  publisher = {Graphics Press},
  address = {Cheshire, CT, USA},
 } 
+
+
+@Manual{nullabor,
+  title = {nullabor: Tools for Graphical Inference},
+  author = {Hadley Wickham and Niladri Roy Chowdhury and Di Cook},
+  year = {2014},
+  note = {R package version 0.3.1},
+  url = {http://CRAN.R-project.org/package=nullabor},
+}
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2009},
+  isbn = {978-0-387-98140-6},
+  url = {http://had.co.nz/ggplot2/book},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain Francois},
+  year = {2015},
+  note = {R package version 0.4.3},
+  url = {http://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{mnormt,
+  title = {The {R} package \texttt{mnormt}: The multivariate normal and $t$ distributions (version 1.5-3)},
+  author = {Adelchi Azzalini and Alan Genz},
+  year = {2015},
+  url = {http://azzalini.stat.unipd.it/SW/Pkg-mnormt},
+}
+
+@Manual{tidyr,
+  title = {tidyr: Easily Tidy Data with `spread()` and `gather()` Functions},
+  author = {Hadley Wickham},
+  year = {2015},
+  note = {R package version 0.3.1},
+  url = {http://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2015},
+  note = {R package version 1.11.},
+  url = {http://CRAN.R-project.org/package=knitr}
+}
+
+@Manual{mFilter,
+  title = {mFilter: Miscellaneous time series filters},
+  author = {Mehmet Balcilar},
+  year = {2007},
+  note = {R package version 0.1-3},
+  url = {http://CRAN.R-project.org/package=mFilter},
+}
+
+@Manual{grid,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2014},
+  url = {http://www.R-project.org/},
+}
+
+@Manual{gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2015},
+  note = {R package version 2.0.0},
+  url = {http://CRAN.R-project.org/package=gridExtra},
+}
+
+@Manual{stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2015},
+  note = {R package version 1.0.0},
+  url = {http://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Becker, R., and Wilks, A., and Brownrigg, R., and Minka, T., and Deckmyn, A.},
+  year = {2016},
+  note = {R package version 3.0.2},
+  url = {http://CRAN.R-project.org/package=maps},
+}
+
+@Manual{gridSVG,
+  title= {Functions to export graphics drawn with package grid to SVG format},
+  author={Paul Murrell and Simon Potter},
+  year = {2015},
+  note = {R package version 1.5-0},
+  url = {http://CRAN.R-project.org/package=gridSVG}
+}
+
+@Manual{Rstudio,
+  title = {RStudio: Integrated Development Environment for R}, 
+  author = {{RStudio Team}}, 
+  organization = {RStudio, Inc.}, 
+  address = {Boston, MA}, 
+  year = {2015}, 
+  url = {http://www.rstudio.com/}, 
+}
+
+@Manual{R,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2014},
+  url = {http://www.R-project.org/},
+}
+  
