--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,8 @@
 - Decide on journals
 - Clean language/typos/references in first 4 pages
 *- Create a turk code folder, clean code, upload to git
-- Acknowledge NSF, reproducibility details
-- Cite software used
+*- Acknowledge NSF, reproducibility details
+*- Cite software used
 
 25/01/2016
 - journals: jcgs, tvcg, comp. stats, econometrics
