--- a/paper/references.bib
+++ b/paper/references.bib
@@ -393,13 +393,6 @@ publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
 
-@article{harrison2014ranking,
-  title = {Ranking Visualizations of Correlation using Weber's Law},
-  author = {Lane Harrison AND Fumeng Yang AND Steven Franconeri AND Remco Chang},
-  journal = {IEEE Conference on Information Visualization (InfoVis)},
-  year = {2014}
-}
-
 @article{lane1985,Author={Lane, D.~M. and Anderson, C.~A. and Kellam, K.~L.},Year=1985,Title={Judging the Relatedness of Variables:  The Psychophysics of Covariation Detection},journal={Journal of Experimental Psychology:  Human Perception and Performance}, Volume=11, Pages={640--649}}
 
 @article{webers,author={Rensink, R.~A. and Baldridge, G.},Year=2010,title={The Perception of Correlation in Scatterplots}, Journal={Computer Graphics Forum}, volume=29, pages={1203--1210}}
@@ -472,15 +465,6 @@ address = {Los Alamitos, CA, USA},
   url = {http://CRAN.R-project.org/package=mFilter},
 }
 
-@Manual{grid,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2014},
-  url = {http://www.R-project.org/},
-}
-
 @Manual{gridExtra,
   title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
   author = {Baptiste Auguie},
@@ -506,7 +490,7 @@ address = {Los Alamitos, CA, USA},
 }
 
 @Manual{gridSVG,
-  title= {Functions to export graphics drawn with package grid to SVG format},
+  title= {gridSVG: Functions to export graphics drawn with package grid to SVG format},
   author={Paul Murrell and Simon Potter},
   year = {2015},
   note = {R package version 1.5-0},
